# Genesis

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md
.cache/clangd/index/: main.cpp.AC8F0697266AA85F.idx
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  ROADMAP.md  SECURITY.md  User Workflow.md  VISION.md
src/: main.cpp
